--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "parcel ./src/index.html",
     "prebuild": "npx rimraf build",
     "build-dev": "parcel build --public-url ./ ./src/index.html   --no-minify  -d build",
-    "build": "parcel build --public-url ./ ./src/index.html  --no-source-maps  -d build"
+    "build": "parcel build --public-url ./ ./src/index.html --no-minify --no-source-maps  -d build"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
@@ -22,13 +22,9 @@
     "randomcolor": "^0.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.13.15",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.32.8"
-  },
-  "browserslist": []
+  }
 }
